force scrollbar to be visible to prevent awkward jump

--- a/src/assets/styles/_elements.sections.css
+++ b/src/assets/styles/_elements.sections.css
@@ -6,6 +6,10 @@
  * Sections
  *
  * https://w3c.github.io/html/sections.html
+ *
+ * 1. Force scrollbars to always be visible to prevent awkward ‘jumps’ when
+ *    navigating between pages that do/do not have enough content to produce
+ *    scrollbars naturally.
  */
 
 /* -------------------------------------
@@ -14,6 +18,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-y: scroll; /* [1] */
   height: 100%;
 }
 
